--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Guizot, M. (François), 1787-1874'
 - !lcsh 'France -- Foreign relations -- 1815-1848'
 - !lcsh 'France -- Politics and government -- 1814-1830'
+- GITenberg
 title: Mémoires pour servir à l'Histoire de mon temps (Tome 2)
 url: http://www.gutenberg.org/ebooks/15312
